Extraction and Frontend Update
- changed data-extraction to be working with dataframes closes #9
- updated frontend for better width

--- a/backend/data_process.ipynb
+++ b/backend/data_process.ipynb
@@ -93,83 +93,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Iteration through data \r\n",
     "# TODO: Remove Measurment-Title ???\r\n",
-    "# TODO: Process for multi-row data\r\n",
     "\r\n",
     "\r\n",
-    "dictTest = {\"NCTId\":[],\"Condition\":[],\"Change\":[],\"Reference\":[], \"Variable\" :[], \"Timepoint\":[]}\r\n",
     "\r\n",
-    "for index, row in data.iterrows():\r\n",
+    "def data_to_dataframe(data):\r\n",
+    "    dfTest = pd.DataFrame(columns=[\"NCTId\",\"Condition\",\"Change\",\"Reference\", \"Variable\", \"Timepoint\"])\r\n",
     "\r\n",
-    "    \r\n",
+    "    for index, row in data.iterrows():\r\n",
+    "        pointer = 0\r\n",
+    "        trial_id = row[1]\r\n",
     "\r\n",
+    "        condition = row[2]\r\n",
+    "        \r\n",
+    "        primary_endpoint = row[3]\r\n",
+    "        primary_endpoints = []\r\n",
     "\r\n",
-    "    trial_id = row[1]\r\n",
+    "        primary_endpoint_timepoint = row[4]\r\n",
+    "        primary_endpoint_timepoints = []\r\n",
     "\r\n",
-    "    condition = row[2]\r\n",
-    "    \r\n",
-    "    primary_endpoint = row[3]\r\n",
-    "    primary_endpoints = []\r\n",
+    "        secondary_endpoint = row[5]\r\n",
+    "        secondary_endpoints = []\r\n",
     "\r\n",
-    "    primary_endpoint_timepoint = row[4]\r\n",
-    "    primary_endpoint_timepoints = []\r\n",
+    "        secondary_endpoint_timepoint = row[6]\r\n",
+    "        secondary_endpoint_timepoints = []\r\n",
+    "        \r\n",
+    "        if  primary_endpoint.find(\"|\") != -1:\r\n",
+    "            primary_endpoints = primary_endpoint.split(\"|\")\r\n",
     "\r\n",
-    "    secondary_endpoint = row[5]\r\n",
-    "    secondary_endpoints = []\r\n",
+    "        if  primary_endpoint_timepoint.find(\"|\") != -1:\r\n",
+    "            primary_endpoint_timepoints = primary_endpoint_timepoint.split(\"|\")\r\n",
     "\r\n",
-    "    secondary_endpoint_timepoint = row[6]\r\n",
-    "    secondary_endpoint_timepoints = []\r\n",
-    "    \r\n",
-    "    if  primary_endpoint.find(\"|\") != -1:\r\n",
-    "        primary_endpoints = primary_endpoint.split(\"|\")\r\n",
+    "        if  secondary_endpoint.find(\"|\") != -1:\r\n",
+    "            secondary_endpoints = secondary_endpoint.split('|')\r\n",
     "\r\n",
-    "    if  primary_endpoint_timepoint.find(\"|\") != -1:\r\n",
-    "        primary_endpoint_timepoints = primary_endpoint_timepoint.split(\"|\")\r\n",
-    "\r\n",
-    "    if  secondary_endpoint.find(\"|\") != -1:\r\n",
-    "        secondary_endpoints = secondary_endpoint.split('|')\r\n",
-    "\r\n",
-    "    if  secondary_endpoint_timepoint.find(\"|\") != -1:\r\n",
-    "        secondary_endpoint_timepoints = secondary_endpoint_timepoint.split('|')\r\n",
-    "    \r\n",
-    "    if primary_endpoints == []:\r\n",
-    "        target = nlp(primary_endpoint)\r\n",
-    "        for entity in target.ents:\r\n",
-    "            dictTest[\"NCTId\"].append(trial_id)\r\n",
-    "            dictTest[\"Condition\"].append(condition)\r\n",
-    "            if entity.label_ != \"Condition\":\r\n",
-    "                dictTest[entity.label_].append(entity.text)\r\n",
-    "    else:\r\n",
-    "        for point in primary_endpoints:\r\n",
-    "            target = nlp(point)\r\n",
-    "            for entity in target.ents:\r\n",
-    "                dictTest[\"NCTId\"].append(trial_id)\r\n",
-    "                dictTest[\"Condition\"].append(condition)\r\n",
-    "                if entity.label_ != \"Condition\":\r\n",
-    "                    dictTest[entity.label_].append(entity.text)\r\n",
+    "        if  secondary_endpoint_timepoint.find(\"|\") != -1:\r\n",
+    "            secondary_endpoint_timepoints = secondary_endpoint_timepoint.split('|')\r\n",
+    "        \r\n",
+    "        if primary_endpoints == []:\r\n",
+    "            endpoint_art = \"Primary_endpoint\"\r\n",
+    "            dfTemp = process_text_entry(trial_id, condition, primary_endpoint, endpoint_art, pointer)\r\n",
+    "            dfTest = dfTest.append(dfTemp, ignore_index= True)\r\n",
+    "        else:\r\n",
+    "            for point in primary_endpoints:\r\n",
+    "                endpoint_art = \"Primary_endpoint\"\r\n",
+    "                dfTemp = process_text_entry(trial_id, condition, point, endpoint_art, pointer)\r\n",
+    "                dfTest = dfTest.append(dfTemp, ignore_index= True)\r\n",
     "\r\n",
     "\r\n",
-    "    if secondary_endpoints == []:\r\n",
-    "        target = nlp(secondary_endpoint)\r\n",
-    "        for entity in target.ents:\r\n",
-    "            dictTest[\"NCTId\"].append(trial_id)\r\n",
-    "            dictTest[\"Condition\"].append(condition)\r\n",
-    "            \r\n",
-    "            if entity.label_ != \"Condition\":\r\n",
-    "                dictTest[entity.label_].append(entity.text)\r\n",
-    "    else:\r\n",
-    "        for point in secondary_endpoints:\r\n",
-    "            target = nlp(point)\r\n",
-    "            for entity in target.ents:\r\n",
-    "                dictTest[\"NCTId\"].append(trial_id)\r\n",
-    "                dictTest[\"Condition\"].append(condition)\r\n",
-    "                if entity.label_ != \"Condition\":\r\n",
-    "                    dictTest[entity.label_].append(entity.text)\r\n"
+    "        if secondary_endpoints == []:\r\n",
+    "            endpoint_art=\"Secondary_endpoint\"\r\n",
+    "            dfTemp = process_text_entry(trial_id, condition, secondary_endpoint, endpoint_art, pointer)\r\n",
+    "            dfTest = dfTest.append(dfTemp, ignore_index= True)\r\n",
+    "        else:\r\n",
+    "            for point in secondary_endpoints:\r\n",
+    "                endpoint_art = \"Secondary_endpoint\"\r\n",
+    "                dfTemp = process_text_entry(trial_id, condition, point,endpoint_art, pointer)\r\n",
+    "                dfTest = dfTest.append(dfTemp, ignore_index= True)\r\n",
+    "                pointer+=1\r\n",
+    "\r\n",
+    "    return dfTest\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_text_entry(nctid, condition, text, endpoint_art, pointer):\r\n",
+    "    dfTemp = pd.DataFrame(columns=[\"NCTId\",\"Condition\",\"Change\",\"Reference\", \"Variable\", \"Timepoint\", \"Endpoint Art\"])\r\n",
+    "\r\n",
+    "    target = nlp(text)\r\n",
+    "    for entity in target.ents:\r\n",
+    "        dfTemp.at[pointer,\"NCTId\"]=nctid\r\n",
+    "        dfTemp.at[pointer,\"Condition\"]=condition\r\n",
+    "        if entity.label_ != \"Condition\":\r\n",
+    "            dfTemp[entity.label_]=entity.text\r\n",
+    "        dfTemp.at[pointer,\"Endpoint Art\"]=endpoint_art\r\n",
+    "    return dfTemp\r\n"
    ]
   },
   {
@@ -179,25 +186,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "\r\n",
-    "results_df = pd.DataFrame(dict([(k,pd.Series(v)) for k,v in dictTest.items()]))"
+    "results_df = data_to_dataframe(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NCTId</th>\n      <th>Condition</th>\n      <th>Change</th>\n      <th>Reference</th>\n      <th>Variable</th>\n      <th>Timepoint</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NCT01814787</td>\n      <td>Type 2 Diabetes</td>\n      <td>Number of Children</td>\n      <td>Validation</td>\n      <td>Documented Risk Factors</td>\n      <td>12 months</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NCT01814787</td>\n      <td>Type 2 Diabetes</td>\n      <td>outcome</td>\n      <td>comparison</td>\n      <td>SCOUT DS algorithm</td>\n      <td>12 months</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NCT01814787</td>\n      <td>Type 2 Diabetes</td>\n      <td>Number of Participants</td>\n      <td>Correlation</td>\n      <td>total volumetric bone mineral density (vBMD)</td>\n      <td>12 months</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NCT01346033</td>\n      <td>Type 2 Diabetes</td>\n      <td>number of participants</td>\n      <td>Correlation</td>\n      <td>risk test only (RTO)- group</td>\n      <td>All cause</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NCT01346033</td>\n      <td>Type 2 Diabetes</td>\n      <td>Characteristic</td>\n      <td>Correlation</td>\n      <td>HbA1c-measurement (HbA1c-group)</td>\n      <td>12 months</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>672</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>673</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>674</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>675</th>\n      <td>NCT00562029</td>\n      <td>Type 2 Diabetes Mellitus</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>676</th>\n      <td>NCT00562029</td>\n      <td>Type 2 Diabetes Mellitus</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>677 rows × 6 columns</p>\n</div>",
-      "text/plain": "           NCTId                          Condition                  Change  \\\n0    NCT01814787                    Type 2 Diabetes      Number of Children   \n1    NCT01814787                    Type 2 Diabetes                 outcome   \n2    NCT01814787                    Type 2 Diabetes  Number of Participants   \n3    NCT01346033                    Type 2 Diabetes  number of participants   \n4    NCT01346033                    Type 2 Diabetes          Characteristic   \n..           ...                                ...                     ...   \n672  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n673  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n674  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n675  NCT00562029           Type 2 Diabetes Mellitus                     NaN   \n676  NCT00562029           Type 2 Diabetes Mellitus                     NaN   \n\n       Reference                                      Variable  Timepoint  \n0     Validation                       Documented Risk Factors  12 months  \n1     comparison                            SCOUT DS algorithm  12 months  \n2    Correlation  total volumetric bone mineral density (vBMD)  12 months  \n3    Correlation                   risk test only (RTO)- group  All cause  \n4    Correlation               HbA1c-measurement (HbA1c-group)  12 months  \n..           ...                                           ...        ...  \n672          NaN                                           NaN        NaN  \n673          NaN                                           NaN        NaN  \n674          NaN                                           NaN        NaN  \n675          NaN                                           NaN        NaN  \n676          NaN                                           NaN        NaN  \n\n[677 rows x 6 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NCTId</th>\n      <th>Condition</th>\n      <th>Change</th>\n      <th>Reference</th>\n      <th>Variable</th>\n      <th>Timepoint</th>\n      <th>Endpoint Art</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NCT01814787</td>\n      <td>Type 2 Diabetes</td>\n      <td>Number of Children</td>\n      <td>NaN</td>\n      <td>Documented Risk Factors</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NCT01346033</td>\n      <td>Type 2 Diabetes</td>\n      <td>NaN</td>\n      <td>Validation</td>\n      <td>SCOUT DS algorithm</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NCT04765631</td>\n      <td>Type 2 Diabetes</td>\n      <td>outcome</td>\n      <td>comparison</td>\n      <td>total volumetric bone mineral density (vBMD)</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NCT03979768</td>\n      <td>Type2 Diabetes</td>\n      <td>Number of Participants</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NCT03979768</td>\n      <td>Type2 Diabetes</td>\n      <td>number of participants</td>\n      <td>NaN</td>\n      <td>HbA1c-measurement (HbA1c-group)</td>\n      <td>NaN</td>\n      <td>Secondary_endpoint</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>321</th>\n      <td>NCT01755468</td>\n      <td>Type 2 Diabetes</td>\n      <td>NaN</td>\n      <td>Baseline</td>\n      <td>NaN</td>\n      <td>2-years</td>\n      <td>Secondary_endpoint</td>\n    </tr>\n    <tr>\n      <th>322</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>percentage</td>\n      <td>HbA1c</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>323</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>liter</td>\n      <td>Fasting Insulin Level</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>324</th>\n      <td>NCT04363710</td>\n      <td>Type 2 Diabetes Mellitus in Obese</td>\n      <td>NaN</td>\n      <td>BMI</td>\n      <td>Weight</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n    <tr>\n      <th>325</th>\n      <td>NCT00562029</td>\n      <td>Type 2 Diabetes Mellitus</td>\n      <td>NaN</td>\n      <td>Resolution</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Primary_endpoint</td>\n    </tr>\n  </tbody>\n</table>\n<p>326 rows × 7 columns</p>\n</div>",
+      "text/plain": "           NCTId                          Condition                  Change  \\\n0    NCT01814787                    Type 2 Diabetes      Number of Children   \n1    NCT01346033                    Type 2 Diabetes                     NaN   \n2    NCT04765631                    Type 2 Diabetes                 outcome   \n3    NCT03979768                     Type2 Diabetes  Number of Participants   \n4    NCT03979768                     Type2 Diabetes  number of participants   \n..           ...                                ...                     ...   \n321  NCT01755468                    Type 2 Diabetes                     NaN   \n322  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n323  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n324  NCT04363710  Type 2 Diabetes Mellitus in Obese                     NaN   \n325  NCT00562029           Type 2 Diabetes Mellitus                     NaN   \n\n      Reference                                      Variable Timepoint  \\\n0           NaN                       Documented Risk Factors       NaN   \n1    Validation                            SCOUT DS algorithm       NaN   \n2    comparison  total volumetric bone mineral density (vBMD)       NaN   \n3           NaN                                           NaN       NaN   \n4           NaN               HbA1c-measurement (HbA1c-group)       NaN   \n..          ...                                           ...       ...   \n321    Baseline                                           NaN   2-years   \n322  percentage                                         HbA1c       NaN   \n323       liter                         Fasting Insulin Level       NaN   \n324         BMI                                        Weight       NaN   \n325  Resolution                                           NaN       NaN   \n\n           Endpoint Art  \n0      Primary_endpoint  \n1      Primary_endpoint  \n2      Primary_endpoint  \n3      Primary_endpoint  \n4    Secondary_endpoint  \n..                  ...  \n321  Secondary_endpoint  \n322    Primary_endpoint  \n323    Primary_endpoint  \n324    Primary_endpoint  \n325    Primary_endpoint  \n\n[326 rows x 7 columns]"
      },
-     "execution_count": 69,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,13 +215,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RangeIndex(start=0, stop=326, step=1)"
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "export = results_df\r\n",
     "export = export.fillna('Not Mentioned')\r\n",
-    "export.to_csv(\"results_test.csv\")"
+    "export.rename_axis(\"Index\", axis='index', inplace=True)\r\n",
+    "export.to_csv(\"results.csv\")"
    ]
   }
  ],
