--- a/labelgrouping_labelconcat.ipynb
+++ b/labelgrouping_labelconcat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "source": [
     "import spacy, random\r\n",
     "from spacy.util import minibatch, compounding\r\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "source": [
     "# Loading the Model\r\n",
     "nlp = spacy.load(\"./training/ner_model\")"
@@ -24,29 +24,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
+   "source": [
+    "def get_labels(target_list):\r\n",
+    "    label_list=[]\r\n",
+    "\r\n",
+    "    for el in target_list:\r\n",
+    "        if el.label_ == \"Reference\" or el.label_ == \"Variable\":\r\n",
+    "            print(el.text)\r\n",
+    "            label_list.append(el.text)\r\n",
+    "\r\n",
+    "    label_list = list(set(label_list))\r\n",
+    "\r\n",
+    "    label_str = \", \".join(map(str, label_list))\r\n",
+    "    print(label_str)\r\n",
+    "    return label_str"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "source": [
     "def process_text_entry(nctid, condition, text, endpoint_art, pointer, timepoint):\r\n",
     "    dfTemp = pd.DataFrame(columns=[\"NCTId\",\"Condition\",\"Change\",\"Reference\", \"Variable\", \"Timepoint\", \"Endpoint Art\"])\r\n",
     "\r\n",
     "    target = nlp(text)\r\n",
-    "    print(target.ents)\r\n",
+    "    \r\n",
     "    target_list = list(target.ents)\r\n",
-    "    ref_list=[]\r\n",
-    "    for el in target_list:\r\n",
-    "        if el.label_ == \"Reference\":\r\n",
-    "            print(el.text)\r\n",
-    "            ref_list.append(el.text)\r\n",
-    "    ref_srt=\", \".join(map(str, ref_list))\r\n",
-    "    print(ref_srt)\r\n",
+    "\r\n",
+    "    label_str =  get_labels(target_list)\r\n",
+    "    \r\n",
+    "\r\n",
     "    for entity in target.ents:\r\n",
     "        dfTemp.at[pointer,\"NCTId\"]=nctid\r\n",
     "        dfTemp.at[pointer,\"Condition\"]=condition\r\n",
     "        if entity.label_ != \"Condition\":\r\n",
     "            dfTemp[entity.label_]=entity.text\r\n",
     "        dfTemp.at[pointer,\"Endpoint Art\"]=endpoint_art\r\n",
-    "        if entity.label_ == \"Reference\":\r\n",
-    "             dfTemp[entity.label_]=ref_srt\r\n",
+    "        if entity.label_ == \"Reference\" or entity.label_ == \"Variable\":\r\n",
+    "             dfTemp[entity.label_]= label_str\r\n",
     "        if entity.label_ != \"Timepoint\":\r\n",
     "            dfTemp.at[pointer, \"Timepoint\"] = timepoint\r\n",
     "    return dfTemp"
@@ -56,9 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "source": [
-    "text=\"Adjusted Mean Change From Baseline, against Baseline, Baseline, in Diabetes\"\r\n",
+    "text=\"Adjusted Mean Change From Baseline, at Baseline measurments, in Diabetes\"\r\n",
     "nctid=\"1234\"\r\n",
     "condition=\"Diabetes\"\r\n",
     "endointart=\"Primary\"\r\n",
@@ -70,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "source": [
     "process_text_entry(nctid, condition, text,endointart, pointer, timepoint)"
    ],
@@ -79,22 +97,21 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(Adjusted Mean Change, Baseline, Baseline, Baseline)\n",
+      "(Adjusted Mean Change, Baseline, Baseline)\n",
       "Baseline\n",
       "Baseline\n",
-      "Baseline\n",
-      "Baseline, Baseline, Baseline\n"
+      "Baseline\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  NCTId Condition                Change                     Reference  \\\n",
-       "0  1234  Diabetes  Adjusted Mean Change  Baseline, Baseline, Baseline   \n",
+       "  NCTId Condition                Change Reference Variable Timepoint  \\\n",
+       "0  1234  Diabetes  Adjusted Mean Change  Baseline      NaN  2 months   \n",
        "\n",
-       "  Variable Timepoint Endpoint Art  \n",
-       "0      NaN  2 months      Primary  "
+       "  Endpoint Art  \n",
+       "0      Primary  "
       ],
       "text/html": [
        "<div>\n",
@@ -130,7 +147,7 @@
        "      <td>1234</td>\n",
        "      <td>Diabetes</td>\n",
        "      <td>Adjusted Mean Change</td>\n",
-       "      <td>Baseline, Baseline, Baseline</td>\n",
+       "      <td>Baseline</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2 months</td>\n",
        "      <td>Primary</td>\n",
@@ -141,7 +158,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 22
     }
    ],
    "metadata": {}
