--- a/training/ner_model_training.ipynb
+++ b/training/ner_model_training.ipynb
@@ -12,7 +12,7 @@
     "from spacy.training import Example\r\n",
     "from spacy import displacy\r\n",
     "import pandas as pd\r\n",
-    "from training_data.custom_training_data import train_data_init\r\n"
+    "from training_data.custom_training_data import train_data_init"
    ],
    "outputs": [],
    "metadata": {}
@@ -21,10 +21,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
+    "# Init GPU-Usage, load blank model with basis of en_core_web_sm and\r\n",
+    "# enable only NER in the pipeline\r\n",
+    "\r\n",
     "spacy.prefer_gpu()\r\n",
     "nlp = spacy.blank('en')\r\n",
     "source_nlp = spacy.load(\"en_core_web_sm\")\r\n",
-    "nlp.add_pipe(\"ner\", source=source_nlp)"
+    "nlp.add_pipe(\"ner\", source=source_nlp)\r\n",
+    "\r\n",
+    "# Init tracker for training loss with traing_data\r\n",
+    "\r\n",
+    "current_loss = 0\r\n",
+    "training_data_init = train_data_init"
    ],
    "outputs": [
     {
@@ -42,18 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "current_loss = 0\r\n",
-    "training_data_init = train_data_init"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "source": [
+    "'''\r\n",
+    "@author Ervin Joa\r\n",
+    "\r\n",
+    "Init-Training of a custom NER-Model with droprate of 20%\r\n",
+    "\r\n",
+    "@return current_loss\r\n",
+    "'''\r\n",
     "def train_ner_model(trainig_data_init): \r\n",
     "\r\n",
     "    examples = []\r\n",
@@ -101,26 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "doc = nlp(\"To evaluate a nutritional intervention for women newly diagnosed with breast cancer 9 weight control and physical activity program\")\r\n",
-    "print(\"Entities\", [(ent.text, ent.label_) for ent in doc.ents])"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Entities [('nutritional intervention', 'Variable'), ('breast cancer 9 weight control', 'Reference'), ('physical activity program', 'Condition')]\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "source": [
+    "'''\r\n",
+    "@author Ervin Joa\r\n",
+    "\r\n",
+    "Method for the continuation training with SpaCy. After\r\n",
+    "each tme this function is called, the model will be retrained and\r\n",
+    "updated for the data-inputed.\r\n",
+    "\r\n",
+    "@param train_data: Training Data based on the GOLD-Format\r\n",
+    "@return current_loss: Loss of the current training epoch\r\n",
+    "'''\r\n",
+    "\r\n",
     "def resume_train_ner_model(train_data):\r\n",
     "    nlp = spacy.load(\"../training/ner_model\")\r\n",
     "\r\n",
@@ -168,32 +166,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "data_vars = pd.read_csv(\"../training/training_data/varaible_data.csv\")\r\n",
-    "data_refs = pd.read_csv(\"../training/training_data/reference_data.csv\")\r\n",
-    "data_timepoint_1 = pd.read_csv(\"../training/training_data/timepoint_data.csv\")\r\n",
-    "data_change = pd.read_csv(\"../training/training_data/change_data.csv\")\r\n",
-    "data_condition = pd.read_csv(\"../training/training_data/condition_data.csv\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "data_vars.dropna(inplace=True)\r\n",
-    "data_refs.dropna(inplace=True)\r\n",
-    "data_timepoint_1.dropna(inplace=True)\r\n",
-    "data_change.dropna(inplace=True)\r\n",
-    "data_condition.dropna(inplace=True)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "source": [
     "def filter_dataframe_count(df, col_name):\r\n",
@@ -207,23 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "source": [
+    "data_vars = pd.read_csv(\"../training/training_data/varaible_data.csv\")\r\n",
+    "data_refs = pd.read_csv(\"../training/training_data/reference_data.csv\")\r\n",
+    "data_timepoint_1 = pd.read_csv(\"../training/training_data/timepoint_data.csv\")\r\n",
+    "data_change = pd.read_csv(\"../training/training_data/change_data.csv\")\r\n",
+    "data_condition = pd.read_csv(\"../training/training_data/condition_data.csv\")\r\n",
+    "\r\n",
+    "data_vars.dropna(inplace=True)\r\n",
+    "data_refs.dropna(inplace=True)\r\n",
+    "data_timepoint_1.dropna(inplace=True)\r\n",
+    "data_change.dropna(inplace=True)\r\n",
+    "data_condition.dropna(inplace=True)\r\n",
+    "\r\n",
     "# For all Files filter data-entries that are <= 4 words\r\n",
     "\r\n",
     "data_vars = filter_dataframe_count(data_vars, data_vars.iloc[:, 0].name)\r\n",
     "data_refs = filter_dataframe_count(data_refs, data_refs.iloc[:, 0].name)\r\n",
     "data_timepoint_1 = filter_dataframe_count(data_timepoint_1, data_timepoint_1.iloc[:, 0].name)\r\n",
     "data_change = filter_dataframe_count(data_change, data_change.iloc[:, 0].name)\r\n",
-    "data_condition = filter_dataframe_count(data_condition, data_condition.iloc[:, 0].name)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "source": [
+    "data_condition = filter_dataframe_count(data_condition, data_condition.iloc[:, 0].name)\r\n",
+    "\r\n",
     "data_var_training = from_csv_to_train_data(data_vars, \"Variable\", \"units_analyzed\")\r\n",
     "data_ref_training = from_csv_to_train_data(data_refs, \"Reference\", \"param_type\")\r\n",
     "data_timepoint_training = from_csv_to_train_data(data_timepoint_1, \"Timepoint\", \"target_duration\")\r\n",
@@ -262,7 +239,18 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "while current_loss > 1000:\r\n",
+    "'''\r\n",
+    "@author Ervin Joa\r\n",
+    "\r\n",
+    "Main training-loop:\r\n",
+    "\r\n",
+    "    While the loss of training remains above 100:\r\n",
+    "        continue extracting random shuffled training data and retrain the model;\r\n",
+    "    else:\r\n",
+    "        stop;\r\n",
+    "'''\r\n",
+    "\r\n",
+    "while current_loss > 100:\r\n",
     "    data_var_training_random = random.sample(data_var_training, len(data_var_training))\r\n",
     "    data_change_training_random = random.sample(data_change_training, len(data_change_training))\r\n",
     "    data_condition_training_random = random.sample(data_condition_training, len(data_condition_training))\r\n",
@@ -271,8 +259,6 @@
     "    data_to_train = random.sample(training_data, len(training_data))\r\n",
     "    \r\n",
     "    data_to_train_portion = data_to_train[0:500]\r\n",
-    "\r\n",
-    "    print(data_to_train_portion[0:10])\r\n",
     "\r\n",
     "    current_loss = resume_train_ner_model(data_to_train_portion)\r\n",
     "    print(f\"Done Training iteration with loss of {current_loss}\")\r\n",
@@ -306,47 +292,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# nlp_annot = spacy.load(\"../training/ner_model\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "\r\n",
-    "\r\n",
+    "# nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
+    "# data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
     "# annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
-    "\r\n",
     "# df_labels = annotator.annotate(df = data_filtered_raw[0:25], col_text = \"SecondaryOutcomeMeasure\", shuffle = True)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# train_data_init.append(list(df_labels[\"annotations\"]))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# train_data_init"
    ],
    "outputs": [],
    "metadata": {}
@@ -389,6 +338,47 @@
     "                displacy.render(nlp_test(target.text), style='ent')"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "\r\n",
+    "from spacy.scorer import Scorer\r\n",
+    "\r\n",
+    "def evaluate( examples):\r\n",
+    "    ner_model = spacy.load(\"../training/ner_model\")\r\n",
+    "    scorer = Scorer()\r\n",
+    "\r\n",
+    "\r\n",
+    "    examples = []\r\n",
+    "    for text, annots in examples:\r\n",
+    "        predicted=ner_model(text)\r\n",
+    "        example=Example.from_dict(predicted, annots)\r\n",
+    "        examples.append(example)\r\n",
+    "    scores = scorer.score(examples)\r\n",
+    "    return scores\r\n",
+    "\r\n",
+    "examples = [\r\n",
+    "    ('The main outcome is the comparison of total volumetric bone mineral density (vBMD) at the tibia and distal radius',[(9,16, \"Change\"), (24, 34, \"Reference\"),(38,82, \"Variable\")]),\r\n",
+    "    (\"Number of Participants with undiagnosed type 2 diabetes\", [(0, 22,\"Change\"), (40, 55, \"Condition\")]),\r\n",
+    "    (\"2 months\", [(0,8,\"Timepoint\")])\r\n",
+    "]\r\n",
+    "\r\n",
+    "\r\n",
+    "results = evaluate(examples)\r\n",
+    "print(results)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'token_acc': None, 'token_p': None, 'token_r': None, 'token_f': None, 'sents_p': None, 'sents_r': None, 'sents_f': None, 'tag_acc': None, 'pos_acc': None, 'morph_acc': None, 'morph_per_feat': None, 'dep_uas': None, 'dep_las': None, 'dep_las_per_type': None, 'ents_p': None, 'ents_r': None, 'ents_f': None, 'ents_per_type': None, 'cats_score': 0.0, 'cats_score_desc': 'macro F', 'cats_micro_p': 0.0, 'cats_micro_r': 0.0, 'cats_micro_f': 0.0, 'cats_macro_p': 0.0, 'cats_macro_r': 0.0, 'cats_macro_f': 0.0, 'cats_macro_auc': 0.0, 'cats_f_per_type': {}, 'cats_auc_per_type': {}}\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
